--- a/app/src/main/res/values/steps.xml
+++ b/app/src/main/res/values/steps.xml
@@ -349,4 +349,141 @@
 	<item>Соединить все ингредиенты. Заправить майонезом (сметаной).  Подавать, украсив по усмотрению. Приятного аппетита!</item>
 </string-array>
 
+<string-array name="salad_with_fruits">
+	<item>Вымытые фрукты — яблоки, груши, апельсины, мандарины — очистить от кожицы, нарезать дольками (без зерен и сердцевины) и сложить в миску.</item>
+	<item> К моменту подачи на стол фрукты посыпать сахарной пудрой и, слегка посолив, смешать с соусом майонез и лимонным соком. </item>
+	<item>Затем все это сложить горкой в салатник и посыпать цедрой с апельсина, нарезанной очень тонкой соломкой. </item>
+	<item>Украсить салат можно теми же фруктами, а также вареным черносливом, виноградом и ягодами. </item>
+	<item>В зависимости от сезона, фрукты можно подобрать различные (персики, абрикосы, сваренную айву, а также ягоды — землянику, клубнику и др.), но обязательно в сочетании с яблоками. Подается салат к холодному жареному или вареному мясу, телятине, баранине, птице или дичи, а также как самостоятельное блюдо.</item>
+</string-array>
+
+<string-array name="vinegret_iz_pertsa">
+	<item>Очищенные картофель и сваренное вкрутую яйцо нарезать тонкими ломтиками, сложить в миску, прибавить перец, нарезанный на части, посолить, перемешать и поместить горкой в салатник.</item>
+	<item>Горку обложить кантиком из мелко нарезанного лука, украсить дольками яйца и посыпать укропом.</item>
+</string-array>
+
+<string-array name="vinegret_s_myasom">
+	<item>Очищенные огурцы и картофель нарезать тонкими ломтиками. Мясо нарезать маленькими кусочками. </item>
+	<item>Все сложить в миску и смешать с соусом майонез, солью, перцем, горчицей и мелко нарезанным зеленым луком.</item>
+	<item>Винегрет поместить горкой в салатник, украсить ломтиками свеклы, дольками сваренного вкрутую яйца, а также, по желанию, листиками салата, а затем посыпать укропом.</item>
+</string-array>
+
+<string-array name="buter_s_pomi_i_ogur">
+	<item>На круглый кусочек поджаренного хлеба положить полукруглый ломтик помидора и такой же ломтик свежего огурца. </item>
+	<item>Помидор и огурец должны составить полный круг. </item>
+	<item>Середину кружка украсить соусом майонез и кружочком красной редиски.</item>
+</string-array>
+
+<string-array name="buter_s_ikroi">
+	<item>На кружочек белого поджаренного хлеба положить круглый ломтик сваренного вкрутую яйца. </item>
+	<item>В центре этого ломтика сделать маленькую горку из зернистой, паюсной или кетовой икры. </item>
+	<item>По краям яичного ломтика сделать ободок из масла.</item>
+</string-array>
+
+<string-array name="buter_s_sirom">
+	<item>На хрустящую звездочку из поджаренного хлеба положить тонкий ломтик сыра такой же формы, покрыв его в середине небольшой горкой масла, смешанного с томатной пастой; сверху засыпать тертым сыром.</item>
+</string-array>
+
+<string-array name="buter_s_kilkoy">
+	<item>На кружочек поджаренного ржаного хлеба положить кружок помидора, на него — кружок крутого яйца, а сверху — анчоус, или кильку без костей, или ломтик сельди. </item>
+	<item>Вокруг кильки сделать ободок из майонеза, выложить на кильку также «пуговку» майонеза и украсить листиками зелени или кусочком помидора и каперсами.</item>
+	<item> Если бутерброд делается с сельдью, покрыть ее майонезом в виде решетки.</item>
+</string-array>
+
+<string-array name="buter_s_sardinami">
+	<item>На ломтик поджаренного хлеба овальной формы положить кусочек сардины без костей, покрыть майонезом, в который можно добавить 1/2 ст. ложки вареного протертого шпината или томатной пасты. </item>
+	<item>Сверху положить половину ломтика лимона без кожи и зерен.</item>
+</string-array>
+
+<string-array name="buter_s_semgoy">
+	<item>На овальный ломтик хлеба положить кусок семги, один конец ее подогнуть, украсить маслом, черной икрой, листиками зелени петрушки и кусочком огурца.</item>
+</string-array>
+
+<string-array name="seld_s_garnirom">
+	<item>Перед тем как готовить сельдь, если она очень соленая, ее надо вымочить в воде или в некрепком настое чая в течение 3–4 часов. </item>
+	<item>Сельди, очищенные от кожицы и костей (филе), можно вымачивать в холодном молоке: оно придает сельдям нежный вкус.</item>
+	<item>Очистка сельди производится следующим образом. Отрезать край брюшка, головку и хвост, выпотрошить, сделать надрез вдоль спинки и снять кожу с обеих сторон. Отделить мясо от хребтовой кости, срезав ножом реберные кости с каждой половины. Половинки сельди сложить вместе и нарезать.</item>
+	<item>После этого кусочки сельди переложить с доски на тарелку или лоток, приставить вымытую голову (без жабер) и хвост.</item>
+	<item>Подготовленную и уложенную на тарелку или лоток сельдь можно гарнировать свежими огурцами, помидорами, корнишонами, солеными грибами (рыжиками или груздями), вареной свеклой, картофелем, морковью, луком зеленым или репчатым, каперсами и вареными яйцами. </item>
+	<item>Все гарниры должны быть аккуратно и красиво нарезаны в виде кружочков, ломтиков, кубиков, или мелко порублены. </item>
+	<item>Укладывать гарнир следует симметрично по обе стороны сельди. Лук репчатый положить поверх сельди кольцами. Перед подачей на стол полить сельдь и гарнир заправкой.</item>
+	<item>Заправка для сельдей из масла и уксуса. 2-З ст. ложки уксуса смешать с солью, сахаром и перцем (по вкусу), прибавить 1–1 1/2 ст. ложки растительного масла.</item>
+</string-array>
+
+<string-array name="seld_rublenaya">
+	<item> Филе хорошо вымытой и очищенной сельди мелко нарубить, смешать с маслом и протереть сквозь сито. </item>
+	<item>Затем сложить в чашку и маленькой лопаткой или ложкой хорошо выбить. Для вкуса можно прибавить мускатный орех. </item>
+	<item>Подготовленную сельдь сложить на селедочный лоток, придать ей форму рыбки, приставить голову и хвост, а затем обложить ломтиками очищенных яблок и украсить ветками зелени петрушки. </item>
+	<item>Очень вкусна сельдь, протертая с маслом с добавлением яблока, натертого на терке. Приготовленную таким способом сельдь можно подавать на стол в масленке или положить на ломтики хлеба, поджаренные на масле.</item>
+</string-array>
+
+<string-array name="seld_s_kartofelem_i_maslom">
+	<item>Подготовленную и уложенную на блюдо сельдь обложить свежими огурцами, нарезанными кружочками, и украсить ветками зелени петрушки. </item>
+	<item>Отдельно подать свежесваренный очищенный картофель и сливочное масло.</item>
+</string-array>
+
+<string-array name="ustritsi">
+	<item>Раковины устриц обмыть в холодной воде. За 1–2 минуты перед подачей на стол вскрыть раковины специальным ножом, отнять мелкую створку, оставив устрицу нетронутой на глубокой створке, которую тотчас же опустить в холодную подсоленную воду (лучше со льдом), промыть и уложить на блюдо, дно которого устлать ровным слоем мелко наколотого льда.</item>
+	<item> К устрицам подать лимон, разрезанный на 2–4 части, или лимонный сок.</item>
+</string-array>
+
+<string-array name="bujenina">
+	<item>Мясо вымыть и обсушить. Чеснок очистить и нарезать на тонкие пластинки. В куске мяса, при помощи острого ножа сделать надрезы, немного натереть эти разрезы внутри смесью соли и перца и нашпиговать мясо чесноком.</item>
+	<item>Приготовить пряную смесь: Чеснок очистить и мелко порубить или пропустить через чесночный пресс. Лавровый лист измельчить. Соединить чеснок, лавровый лист, соль, перец и хорошо перемешать смесь. Натереть мясо приготовленной смесью, положить в кастрюлю и поставить мариноваться (лучше на ночь). Мясо завернуть в фольгу и поставить в духовку.</item>
+	<item>Запекать при температуре ~170-180 градусов ~60-90 минут. Готовому мясу дать остыть, затем нарезать тонкими ломтиками. Подавать в холодном виде.</item>
+</string-array>
+
+<string-array name="vetchina_v_sire">
+	<item>Сыр натереть на мелкой терке. Зелень вымыть, обсушить и мелко порубить. Чеснок очистить и пропустить через чесноковыжималку. Желатин положить в маленькую кастрюлю, залить холодной водой и оставить набухать на 40-60 минут. Кастрюлю с набухшим желатином поставить на слабый огонь. Нагревать, помешивая, до полного растворения желатина, не доводя до кипения. В миску положить сыр, зелень, чеснок, добавить раствор желатина и хорошо перемешать.</item>
+	<item>На столе расстелить пищевую пленку и выложить на нее сырную массу. Сверху сырную массу также накрыть пищевой пленкой и раскатать скалкой в пласт, толщиной ~1 см (сырная масса должна быть раскатана ровно по размеру бруска ветчины).</item>
+	<item>На раскатанную массу положить ветчину и обернуть ее так, чтобы ветчина оказалась внутри (сырная масса должна довольно плотно прилегать к ветчине).</item>
+	<item>Завернуть ветчину в пищевую пленку и убрать в холодильник на ~2-4 часа. При подаче, нарезать ветчину ломтиками. Чтобы нарезать ветчину аккуратными, ровными ломтиками, нужно при отрезании каждого ломтика смачивать нож в горячей воде, а затем насухо вытирать его полотенцем - тогда сыр не будет крошиться и закуска получится более аккуратной.</item>
+</string-array>
+
+<string-array name="goryachaya_zakuska_v_bagete">
+	<item>Багет разрезать поперек на 3-4 части. Каждую часть разрезать вдоль на 2 половинки. Аккуратно вынуть мякиш из половинок багета, оставляя стенки, толщиной ~1 см.</item>
+	<item>Приготовить начинку. Болгарский перец порезать небольшими кубиками и обжарить на растительном масле ~3-4 минуты. Остудить. Ветчину порезать соломкой. Сыр натереть на терке. Зелень вымыть, обсушить и порубить.</item>
+	<item>Соединить ветчину, болгарский перец, сыр, зелень и перемешать. Добавить яйцо (возможно, понадобится не все яйцо - масса не должна стать жидкой) и еще раз перемешать. Положить немного сметаны или майонеза, чтобы масса стала вязкой, и еще раз хорошо перемешать.</item>
+	<item>В начинку можно также добавить мелко порезанные маринованные огурцы, свежие помидоры, и т.д. Подготовленный багет выложить в смазанную маслом форму и наполнить начинкой.</item>
+	<item>Запекать 10-15 минут в нагретой до ~180°С духовке. Подавать в горячем или холодном виде.</item>
+</string-array>
+
+<string-array name="goryachaya_zakuska_v_lavashe">
+	<item>Помидор вымыть и обсушить. Сыр натереть на терке. Зелень вымыть, обсушить и порубить. Лаваш хорошо сбрызнуть холодной водой и положить на разогретую с растительным или сливочным маслом сковороду так, чтобы края свисали за бортики сковороды. * Если лист лаваша слишком большой - разрежьте его пополам.</item>
+	<item>В середину листа лаваша положить кружок помидора. Немного посолить. Сверху на помидор кружок ветчины. Затем разбить сырое яйцо. Посолить, поперчить. Сверху все посыпать тертым сыром и рубленой зеленью.</item>
+	<item>Подвернуть края лаваша к центру и жарить до румяной корочки (можно сделать сильно или средне зажаренную корочку по желанию). </item>
+	<item>Аккуратно перевернуть ёку на другую сторону, посыпать сверху тертым сыром и жарить еще несколько минут, до румяной корочки. Готовую ёку сразу подавать.</item>
+</string-array>
+
+<string-array name="julen_iz_kuritsh">
+	<item>Окорочка вымыть, положить в кастрюлю с кипящей водой и довести до кипения. Уменьшить огонь, шумовкой снять пену, положить очищенную целую луковицу, и варить при слабом кипении 40-50 минут. За 15 минут до готовности, положить лавровый лист, посолить и поперчить по вкусу.</item>
+	<item>Окорочка вынуть из бульона и остудить. Мясо отделить от костей и нарезать соломкой. Лук очистить и нарезать четвертькольцами. Грибы перебрать, очистить, вымыть и отварить 10 минут (крупные грибы разрезать на несколько частей). Откинуть грибы на дуршлаг и нарезать небольшими кусочками.</item>
+	<item>Совет: лесные грибы отваривать необязательно. Их можно нарезать небольшими кусочками и обжарить до готовности. Вместо лесных грибов можно взять шампиньоны. По желанию, жюльен можно приготовить без добавления грибов.</item>
+	<item>В сковороде разогреть немного растительного масла, выложить грибы, посолить и обжаривать до испарения жидкости. Когда жидкость испарится, добавить кусочек сливочного масла и обжарить 6-8 минут, периодически помешивая.</item>
+	<item>Переложить грибы в миску. В сковороде разогреть сливочное масло вместе с растительным, выложить лук, посолить и поперчить. Обжарить лук до мягкости, периодически помешивая, и снять сковороду с огня.                                                              Совет 1. Лук в жульене играет важную роль. По весу лука берется примерно столько же, сколько и курицы.                                        Совет 2. Жарить лук нужно долго, на медленном огне. Масла должно быть довольно много, чтобы лук не подгорал и не сушился, а медленно томился в масле. Он должен стать очень мягким, практически раствориться в масле.</item>
+	<item>К обжаренному луку добавить грибы, курицу и перемешать. Посыпать мукой, перемешать. Добавить сметану, перемешать и вернуть сковороду на слабый огонь. Довести до кипения и готовить 1-2 минуты, помешивая.</item>
+	<item>Запекать 5-10 минут до расплавления сыра в заранее нагретой до 180°C духовке.</item>
+</string-array>
+
+<string-array name="zakuska_iz_lavasha_s_myasnim_farshem">
+	<item>Лук мелко порезать. Морковь натереть на крупной терке. На сковороде с разогретым растительным маслом обжарить лук. Через 3 минуты добавить морковь и жарить до полу готовности моркови. К луку с морковью выложить фарш и жарить, периодически помешивая, 20-25 минут до готовности фарша, посолить, поперчить. Помидоры порезать кружками. Сыр натереть на крупной терке. Листья салата вымыть и обсушить. Майонез смешать с пропущенным через пресс чесноком. Зелень мелко порезать. Лист лаваша развернуть, смазать его майонезом с чесноком, равномерно разложить на нем фарш, не доходя до краев 2-3 см, и посыпать зеленью.</item>
+	<item>Второй лист лаваша смазать чесночным майонезом с двух сторон и уложить его сверху на фарш. Разложить по всей поверхности лаваша листья салата, сверху на салат выложить кружки помидоров, и полить помидоры майонезом.</item>
+	<item>Накрыть помидоры третьим листом лаваша, слегка смазанным чесночным майонезом с двух сторон.</item>
+	<item>Сверху посыпать лаваш тертым сыром и аккуратно свернуть в рулет. Готовый рулет положить в холодильник на 30-60 минут, затем можно нарезать поперек, толщиной 1,5-2 см.</item>
+</string-array>
+
+<string-array name="zakuska_s_pechenochnim_pashtetom">
+	<item>Перепелиные яйца вымыть и отварить в кипящей, подсоленной воде ~5 минут с момента закипания. Яйца быстро охладить, погрузив в холодную воду и сразу почистить.</item>
+	<item>Приготовить печеночный паштет. Куриную печень промыть, обсушить и нарезать кусочками. Лук очистить и порезать мелко или четвертькольцами. На разогретой с растительным маслом (или смеси сливочного с растительным) сковороде обжарить лук ~3-4 минуты до мягкости. Положить к луку печенку и жарить, помешивая, ~5 минут.</item>
+	<item>Уменьшить огонь и тушить печень под крышкой до готовности ~10 минут (готовность определяется тем, что в печенке нет прожилок крови). Посолить и поперчить. Готовую печенку охладить и дважды пропустить через мясорубку. В печеночную массу положить размягченное сливочное масло (~60 г) и хорошо взбить массу вилкой или венчиком.</item>
+	<item>Если сливочное масло отсекается от паштетной массы, паштет нужно хорошо охладить и еще раз взбить. При помощи перевернутого стакана или другой выемки вырезать из белого хлеба кружки. В небольшом количестве сливочного масла, на разогретой сковороде, обжарить кружки с двух сторон до румяности.</item>
+	<item>Снять с огня и охладить. Печеночный паштет положить в кондитерский мешок с насадкой "звездочка" и выдавить на поджаренные кусочки хлеба.</item>
+</string-array>
+
+<string-array name="krilishki_v_soevom_souse">
+	<item>Крылышки промыть, дать стечь воде и разрезать крылышко на 3 части по суставам.</item>
+	<item>Приготовить маринад. В кастрюльку или другую емкость, где будут мариноваться крылья, положить порезанные крылышки, добавить мед (если мед закристаллизовался - растопить его до жидкого состояния), влить соевый соус, добавить мелко порезанный или пропущенный через чесноковыжималку чеснок. Все хорошо перемешать и оставить мариноваться на 2-4 часа, можно на ночь.</item>
+	<item>Противень для запекания смазать маслом и выложить на него крылышки в один слой. Запекать на среднем огне до готовности, следя, чтобы крылья не подгорели.</item>
+</string-array>
+
 </resources>
