--- a/app/src/main/res/values/steps.xml
+++ b/app/src/main/res/values/steps.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
 	<string-array name="tasty_oli_for_fish">
@@ -484,6 +484,76 @@
 	<item>Крылышки промыть, дать стечь воде и разрезать крылышко на 3 части по суставам.</item>
 	<item>Приготовить маринад. В кастрюльку или другую емкость, где будут мариноваться крылья, положить порезанные крылышки, добавить мед (если мед закристаллизовался - растопить его до жидкого состояния), влить соевый соус, добавить мелко порезанный или пропущенный через чесноковыжималку чеснок. Все хорошо перемешать и оставить мариноваться на 2-4 часа, можно на ночь.</item>
 	<item>Противень для запекания смазать маслом и выложить на него крылышки в один слой. Запекать на среднем огне до готовности, следя, чтобы крылья не подгорели.</item>
+</string-array>
+
+<string-array name="hocol_b_macle">
+	<item> Фасоль отварить, затем обжарить на сковороде с маслом до образования румяной корочки, добавить поджаренный лук, соль, перец, все это хорошо перемешать и охладить. Перед подачей на стол посыпать рубленой зеленью.</item>
+</string-array>
+
+<string-array name="pashtet_ez_hocole">
+	<item>Фасоль отварить, протереть, смешать с поджаренным луком, добавить растительное масло, соль, уксус, перец, все хорошо перемешать, выложить на тарелку и охладить.</item>
+</string-array>
+
+<string-array name="ekra_grebnai">
+	<item> Икру грибную приготовляют из разных соленых или сухих сваренных грибов. </item>
+	<item>Соленые грибы промыть и, дав стечь воде, мелко нарубить, затем нарезать репчатый лук, слегка поджарить его на растительном масле, охладить и смешать с грибами, прибавив немного перца.</item>
+	<item>Из сваренных сухих грибов икру приготовляют таким же способом. Для более острого вкуса можно прибавить лимонный сок или уксус, соль и перец, а также посыпать мелко нарезанным зеленым луком.</item>
+</string-array>
+
+<string-array name="ekra_ez_baklazana">
+	<item>Баклажаны испечь или сварить, снять кожицу, мякоть изрубить, добавить слегка обжаренные лук и помидор, соль, перец, растительное масло и немного уксуса; все это перемешать, проварить на легком огне для удаления излишней влаги и охладить.</item>
+</string-array>
+
+<string-array name="ekra_ez_cBekla">
+	<item>Свеклу промыть, сварить, очистить от кожуры и пропустить через мясорубку. </item>
+	<item>В полученное пюре положить сахар, масло, лимонную цедру и выжать сок лимона . Все это перемешать и поставить в кастрюле на огонь , часто помешивая, чтобы масса не пригорела.</item>
+</string-array>
+
+<string-array name="zfleBnoe_cydak">
+	<item>Очищенного и вымытого судака нарезать на куски. </item>
+	<item>Кости, голову без жабер, зачистки и икру сложить в кастрюлю, прибавить коренья, лук, соль, лавровый лист , залить водой и поставить варить. </item>
+	<item>Через 15–20 минут в эту же кастрюлю положить для варки куски судака. </item>
+	<item>Когда куски рыбы будут готовы, вынуть их шумовкой, уложить на блюдо в форме целой рыбы, но с небольшими промежутками между кусками, и поставить блюдо в холодное место. </item>
+	<item>Получившийся от варки рыбы бульон слить и приготовить 2 2 1/2 стакана желе, т. е. растворить в нем размоченную желатину, вскипятить и процедить через салфетку. </item>
+	<item>Каждый кусок судака украсить ломтиками лимона, моркови, нарезанной в виде звездочек, листиком зелени и залить полученным желе в два-три приема, чтобы украшения не сдвинулись с места, а куски судака были залиты желе. </item>
+	<item>Блюдо держать в холодном месте, пока желе не застынет. К заливному судаку можно подать красную капусту, картофельный салат, огурцы свежие и соленые, а также соус майонез.</item>
+</string-array>
+
+<string-array name="zalivnoy_sudak">
+	<item>Очищенного и вымытого судака нарезать на куски. </item>
+	<item>Кости, голову без жабер, зачистки и икру сложить в кастрюлю, прибавить коренья, лук, соль, лавровый лист (1–2 листка), залить водой и поставить варить. </item>
+	<item>Через 15–20 минут в эту же кастрюлю положить для варки куски судака. </item>
+	<item>Когда куски рыбы будут готовы, вынуть их шумовкой, уложить на блюдо в форме целой рыбы, но с небольшими промежутками между кусками, и поставить блюдо в холодное место. </item>
+	<item>Получившийся от варки рыбы бульон слить и приготовить 2 2 1/2 стакана желе, т. е. растворить в нем размоченную желатину, вскипятить и процедить через салфетку. </item>
+	<item>Каждый кусок судака украсить ломтиками лимона, моркови, нарезанной в виде звездочек, листиком зелени и залить полученным желе в два-три приема, чтобы украшения не сдвинулись с места, а куски судака были залиты желе. </item>
+	<item>Блюдо держать в холодном месте, пока желе не застынет. К заливному судаку можно подать красную капусту, картофельный салат, огурцы свежие и соленые, а также соус майонез.</item>
+</string-array>
+
+<string-array name="zalebnay_ocetrena">
+	<item>Кусок осетрины сварить с добавлением кореньев и охладить. </item>
+	<item>Из бульона, полученного при варке рыбы, приготовить 3–4 стакана прозрачного желе. </item>
+	<item>Готовое и процеженное желе охладить.</item>
+	<item>Сваренную рыбу нарезать тонкими кусками, уложить на противень или блюдо так, чтобы вокруг каждого куска оставалось свободное место для желе.</item>
+	<item> Куски рыбы украсить листиками зелени петрушки, ломтиками моркови, кружочками свежего огурца, кусочками крабов или раков, каперсами. </item>
+	<item>Украшения надо закрепить охлажденным желе, поливая им куски рыбы с ложки. </item>
+	<item>После этого в два-три приема куски рыбы залить ровным слоем желе. </item>
+	<item>Когда заливное остынет, каждый кусок вырезать концом ножа и, красиво уложив на блюдо, гарнировать с одной или с двух сторон букетами вареной моркови, репы, картофеля, зеленого горошка.</item>
+</string-array>
+
+<string-array name="zalebnoy_azyk">
+	<item>Свежий язык, сваренный, охлажденный, нарезанный тонкими кусками, залить так же, как осетрину. </item>
+	<item>Желе приготовить на бульоне, полученном при варке языка, причем необходимо с бульона снять жир. </item>
+	<item>Куски языка до заливки нужно украсить ломтиками вареного яйца, свежего огурца, корнишонов, листиками зелени петрушки. </item>
+	<item>Залитые куски вырезать, обводя каждый кусок концом ножа, уложить красиво на блюдо и гарнировать с одной или двух сторон салатом из белой и красной капусты, кружками помидоров и свежего огурца, маринованными вишнями, сливами, виноградом. </item>
+	<item>Украсить зеленым салатом и зеленью петрушки. </item>
+	<item>Отдельно подать соус «Острый», майонез, соус из сметаны с хреном или хрен с уксусом.</item>
+</string-array>
+
+<string-array name="ctyden_ez_cterlyde">
+	<item>Очищенную и вымытую стерлядь вытереть насухо салфеткой, нарезать на куски и сварить так же, как судака для заливного.</item>
+	<item> После варки куски стерляди выложить в глубокое блюдо или салатник и накрыть салфеткой. </item>
+	<item>В бульон положить размоченную желатину и размешивать ее до растворения. </item>
+	<item>Осветлив желе паюсной или зернистой икрой так же, как уху, процедить его, охладить и залить им стерлядь. Перед заливкой украсить куски стерляди листиками зелени петрушки, раковыми шейками или кусочками крабов.</item>
 </string-array>
 
 </resources>
